--- a/git_prueba.html
+++ b/git_prueba.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, odit.</p>
 </body>
 </html>
